new bus, new route, bus details, route details, etc pages completed

--- a/admin-frontend/.env
+++ b/admin-frontend/.env
@@ -1,1 +1,3 @@
 VITE_APP_BACKEND_DOMAIN_URL = 'http://localhost:5000'
+
+VITE_APP_ORSM_API_KEY = 5b3ce3597851110001cf62488a2bb7e75c484e02b80b14b5c9f463d6
