--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-leaflet/core": "^3.0.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "leaflet": "^1.9.4",
+    "polyline": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
